feat: add pagination to product and articles get requests
